# sigma-gate

./: .gcloudignore  .gitignore  Dockerfile  README.md  SECURITY.md  http_mcp.py  mcp_server.py  pyproject.toml  server.json
.github/workflows/: ci.yml
docs/: hosted.md  index.html
examples/: README.md  agent_middleware.py  ci_gate.py  inline_gate.py
guard/: __init__.py  __main__.py  guard.py  mcp.py  piiguard.py  promptguard.py  secretscan.py
integrations/: README.md  langchain_guard.py
tests/: bench.py  test_guard.py
