[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guard-trustgate"
version = "1.0.0"
description = "Deterministic pre-ship trust gate for AI/agent output (leaked secrets, prompt injection, PII) — one call, stdlib only, no model."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Spektre Labs" }]
keywords = ["security", "llm", "ai-safety", "secrets", "prompt-injection", "pii", "guardrail", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/spektre-labs/guard"
Source = "https://github.com/spektre-labs/guard"

[project.scripts]
guard = "guard.__main__:_entry"
guard-mcp = "guard.mcp:main"

[tool.setuptools]
packages = ["guard"]
